--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: node_js
 node_js:
+- '5.0'
 - '4.1'
 - '4.0'
 - '0.12'
 - '0.11'
 before_script:
 - npm i -g mocha
-script: mocha
+script: mocha --recursive
 deploy:
   provider: heroku
   api_key:
@@ -14,3 +15,5 @@ deploy:
   app: michael-herman
   on:
     repo: blackstc/guest-speaker-app
+    branch: master
+    node: '0.12'
