--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./src/server/bin/www"
+    "start": "node ./src/server/bin/www",
+    "test": "mocha --recursive",
+    "cov": "istanbul cover _mocha -- --recursive -R spec",
+    "send cov": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -28,6 +31,7 @@
     "gulp-uglify": "^1.4.2",
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.3",
+    "mocha-lcov-reporter": "^1.0.0",
     "run-sequence": "^1.1.4"
   }
 }
