--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ node_js:
 - '0.11'
 before_script:
 - npm i -g mocha
-script: mocha --recursive
+- npm i -g coveralls
+script: npm run cov
+after_scrip: npm run send-cov
 deploy:
   provider: heroku
   api_key:
