--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./src/server/bin/www",
     "test": "mocha --recursive",
     "cov": "istanbul cover _mocha -- --recursive -R spec",
-    "send cov": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "send-cov": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
