--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
+    "pg": "^4.4.3",
+    "sequelize": "^3.13.0",
+    "sequelize-cli": "^2.1.0",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2"
   },
@@ -29,6 +32,7 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-nodemon": "^2.0.4",
     "gulp-uglify": "^1.4.2",
+    "istanbul": "^0.4.0",
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.3",
     "mocha-lcov-reporter": "^1.0.0",
