--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "pg": "^4.4.3",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.13.0",
     "sequelize-cli": "^2.1.0",
     "serve-favicon": "~2.3.0",
