--- a/server/config.json
+++ b/server/config.json
@@ -2,22 +2,18 @@
   "development": {
     "username": "Chuck",
     "password": null,
-    "database": "database_development",
+    "database": "guest-app",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "test": {
     "username": "Chuck",
     "password": null,
-    "database": "database_test",
+    "database": "guest-app-test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
-    "username": "Chuck",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable": "DATABASE_URL"
   }
 }
