--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ node_js:
 - '0.12'
 - '0.11'
 before_script:
-- npm i -g mocha
-- npm i -g coveralls
+- npm install -g mocha
+- npm install -g coveralls
 script: npm run cov
-after_script: npm run send-cov
+after_script:
+- npm run send-coverage
 deploy:
   provider: heroku
   api_key:
