--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.3",
     "mocha-lcov-reporter": "^1.0.0",
-    "run-sequence": "^1.1.4"
+    "run-sequence": "^1.1.4",
+    "sqlite3": "^3.1.1"
   }
 }
